Fixed a minor typo with skill names.

--- a/mcMMO/com/gmail/nossr50/locale/locale_pl.properties
+++ b/mcMMO/com/gmail/nossr50/locale/locale_pl.properties
@@ -248,8 +248,8 @@ mcPlayerListener.WoodcuttingSkill=Drwalnictwo:
 mcPlayerListener.YourStats=[[GREEN]][mcMMO] Statystyki
 Party.InformedOnJoin={0} [[GREEN]] dolaczyl do twojej grupy.
 Party.InformedOnQuit={0} [[GREEN]] wyszedl z twojej grupy.
-Skills.YourGreenTerra=[[GREEN]]Twoja umiejetnosc [[YELLOW]]wprawne rece [[GREEN]]zostala naladowana!
-Skills.YourTreeFeller=[[GREEN]]Twoja umiejetnosc [[YELLOW]]Powalacz drzew [[GREEN]]zostala naladowana!
+Skills.YourGreenTerra=[[GREEN]]Twoja umiejetnosc [[YELLOW]]zielona ziemia [[GREEN]]zostala naladowana!
+Skills.YourTreeFeller=[[GREEN]]Twoja umiejetnosc [[YELLOW]]powalacz drzew [[GREEN]]zostala naladowana!
 Skills.YourSuperBreaker=[[GREEN]]Twoja umiejetnosc [[YELLOW]]Super kopacz [[GREEN]]zostala naladowana!
 Skills.YourSerratedStrikes=[[GREEN]]Twoja umiejetnosc [[YELLOW]]furia ostrzy [[GREEN]]zostala naladowana!
 Skills.YourBerserk=[[GREEN]]Twoja umiejetnosc [[YELLOW]]Wejscie Smoka [[GREEN]]zostala naladowana!
