Fixed another small error discovered while playtesting.

--- a/mcMMO/com/gmail/nossr50/locale/locale_pl.properties
+++ b/mcMMO/com/gmail/nossr50/locale/locale_pl.properties
@@ -299,7 +299,7 @@ Skills.HerbalismUp=[[YELLOW]]Znajomosc zielarstwa wzrosla o {0}. Razem ({1})
 Skills.MiningUp=[[YELLOW]]Umiejetnosci gornicze wzrosly o {0}. Razem ({1})
 Skills.WoodcuttingUp=[[YELLOW]]Umiejetnosci drwalnicze wzrosly o {0}. Razem ({1})
 Skills.RepairUp=[[YELLOW]]Umiejetnosc naprawy wzrosla o {0}. Razem ({1})
-Skills.ExcavationUp=[[YELLOW]]Znajomosc archeologii wzrosla o {0}. Razem ({1})
+Skills.ExcavationUp=[[YELLOW]]Umiejetnosci wykopaliskowe wzrosly o {0}. Razem ({1})
 Skills.FeltEasy=[[GRAY]]To bylo proste.
 Skills.StackedItems=[[DARK_RED]]Nie mozesz naprawiac grup przedmiotow.
 Skills.NeedMore=[[DARK_RED]]Potrzebujesz wiecej
