--- a/mcMMO/Changelog.txt
+++ b/mcMMO/Changelog.txt
@@ -1,5 +1,10 @@
 Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
+Version 1.0.50
+/mcgod and /mmoedit now require permissions to be setup in some shape or form to be used
+mcMMO now uses Spout instead of BukkitContrib
+BukkitContrib support dropped
+
 Version 1.0.49
 Updated German locale
 Fixed bug where using the party system on a MySQL setup caused errors when writing to non-existent files
