--- a/mcMMO/com/gmail/nossr50/locale/locale_pl.properties
+++ b/mcMMO/com/gmail/nossr50/locale/locale_pl.properties
@@ -30,7 +30,7 @@ m.mccAdminToggle=- Wlacza chat adminow.
 m.mccWhois=[nazwa gracza] [[RED]]- Zobacz szczegolowe informacje o graczu.
 m.mccMmoedit=[nazwa gracza] [umiejetnosc] [nowa wartosc] [[RED]]- Modyfikuje cel.
 m.mccMcGod=- Niesmiertelnosc.
-m.mccSkillInfo=[nazwa umiejetnosci (np. Mining)] [[RED]]- Wyswietla informacje na temat umiejetnosci.
+m.mccSkillInfo=/[nazwa umiejetnosci (np. Mining)] [[RED]]- Wyswietla informacje na temat umiejetnosci.
 m.mccModDescription=[[RED]]- Wyswietla opis moda.
 m.SkillHeader=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 m.XPGain=[[DARK_GRAY]]Dostajesz doswiadczenie za: [[WHITE]]{0}
