--- a/mcMMO/Changelog.txt
+++ b/mcMMO/Changelog.txt
@@ -2,14 +2,17 @@ Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
 Version 1.0.51
 Brand new XP Bars and Skill Icons designed by BrandonXP
-Noises added to leveling
+Repairing metal now has a sound effect
+Leveling up now has a sound effect
 MySpawn now works correctly when you are in the nether
 MySpawn message when you right click a bed is now squelched
-Intervals at which players renegerate hp have doubled in length
+Intervals at which players renegerate hp have doubled in length (making it take 100% longer to regenerate than before)
 Rewrote many variables stored per player to be integer instead of long, reducing overall memory usage of mcMMO
 Rewrote the Timer mcMMO relies on to instead use the BukkitScheduler for performance
 Fixed the party member list of /party
 Removed a debug message when repairing diamond armor
+Changed chat to use getDisplayName() instead of getName()
+Changed chat priority from lowest to highest
 
 Version 1.0.50
 New /xprate command for those with mcmmo.admin permissions!
