--- a/mcMMO/com/gmail/nossr50/locale/locale_de.properties
+++ b/mcMMO/com/gmail/nossr50/locale/locale_de.properties
@@ -346,3 +346,12 @@ Party.NowOwner=[[RED]]Du bist nun der Gruppenleiter.
 Party.NowNotOwner=[[RED]]Du bist nicht laenger der Gruppenleiter.
 Party.RequiresPass=[[RED]]Diese Gruppe benoetigt ein Passwort. Nutze [[YELLOW]]/{0}[[WHITE]] <party> <password>[[RED]] zum beitreten.
 Party.PtpDelay=[[RED]]Du kannst dies nicht so zeitig erneut benutzen [[WHITE]]([[YELLOW]]{0}s[[WHITE]])
+Commands.xprate.proper=[[DARK_AQUA]]Proper usage is /{0} [integer] [true:false]
+Commands.xprate.proper2=[[DARK_AQUA]]Also you can type /{0} reset to turn everything back to normal
+Commands.xprate.proper3=[[RED]]Enter true or false for the second value
+Commands.xprate.over=[[RED]]mcMMO XP Rate Event is OVER!!
+Commands.xprate.started=[[GOLD]]XP EVENT FOR mcMMO HAS STARTED!
+Commands.xprate.started2=[[GOLD]]mcMMO XP RATE IS NOW {0}x!!
+Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
+Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
+Commands.xplock.invalid=[[RED]]That is not a valid skillname! Try /xplock mining
