--- a/mcMMO/Changelog.txt
+++ b/mcMMO/Changelog.txt
@@ -1,18 +1,23 @@
 Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
-Version 1.0.51
-Brand new XP Bars and Skill Icons designed by BrandonXP
+Version 1.1.0
+Brand new XP Bars, Health bars, and Skill Icons designed by BrandonXP
+Added /xplock <skillname> to lock the xp bar to a skill
 Repairing metal now has a sound effect
-Leveling up now has a sound effect
+Shears added to Repair
 MySpawn now works correctly when you are in the nether
 MySpawn message when you right click a bed is now squelched
 Intervals at which players renegerate hp have doubled in length (making it take 100% longer to regenerate than before)
 Rewrote many variables stored per player to be integer instead of long, reducing overall memory usage of mcMMO
 Rewrote the Timer mcMMO relies on to instead use the BukkitScheduler for performance
 Fixed the party member list of /party
+Fixed bug where Swords would counter-attack Projectiles
 Removed a debug message when repairing diamond armor
 Changed chat to use getDisplayName() instead of getName()
 Changed chat priority from lowest to highest
+Added Clay to excavation
+Added new items to Clay's loot tables
+Archery now works with the latest CB
 
 Version 1.0.50
 New /xprate command for those with mcmmo.admin permissions!
