--- a/mcMMO/com/gmail/nossr50/locale/locale_pl.properties
+++ b/mcMMO/com/gmail/nossr50/locale/locale_pl.properties
@@ -340,3 +340,12 @@ Party.PasswordSet=[[GREEN]]Haslo grupy zmienione na: {0}
 Party.CouldNotKick=[[DARK_RED]]Nie mozna wyrzucic gracza {0}
 Party.NotInYourParty=[[DARK_RED]]{0} nie jest czlonkiem twojej grupy.
 Party.CouldNotSetOwner=[[DARK_RED]]Nie mozna przekazac grupy do {0}
+Commands.xprate.proper=[[DARK_AQUA]]Proper usage is /{0} [integer] [true:false]
+Commands.xprate.proper2=[[DARK_AQUA]]Also you can type /{0} reset to turn everything back to normal
+Commands.xprate.proper3=[[RED]]Enter true or false for the second value
+Commands.xprate.over=[[RED]]mcMMO XP Rate Event is OVER!!
+Commands.xprate.started=[[GOLD]]XP EVENT FOR mcMMO HAS STARTED!
+Commands.xprate.started2=[[GOLD]]mcMMO XP RATE IS NOW {0}x!!
+Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
+Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
+Commands.xplock.invalid=[[RED]]That is not a valid skillname! Try /xplock mining
