--- a/mcMMO/Changelog.txt
+++ b/mcMMO/Changelog.txt
@@ -1,5 +1,16 @@
 Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
+Version 1.1.06
+Retro HUD implemented!
+With the help of Randomage the XP Formulas have been vastly changed for flexability
+Global modifiers and skill modifiers now support decimals
+GigaDrillBreaker/Berserk doesn't drop clay blocks anymore
+Fixed bug where Herbalism didn't heal more for bread/stew when right clicking a block
+Fixed bug where Wheat did not use the values form the config file
+
+In order to streamline the configuration of how XP/Levels are gained, we rewrote the formulas, it is paramount to understand that from a game perspective that does NOT change how fast you level up, it just changes how easy it is to configure the system, current configuration files will be automatically updated maintaining your selected leveling speed
+
+
 Version 1.1.05
 Maps dropped from excavation are created correctly, and represent the area they are found in
 Fixed an exploit with clay and excavation
