--- a/mcMMO/Changelog.txt
+++ b/mcMMO/Changelog.txt
@@ -1,25 +1,18 @@
 Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
 Version 1.1.06
+mcMMO menu implemented! Default is 'M', change this in config
 Retro HUD implemented!
+Retro XP fill color is completely customizable on a per skill basis
+New levelup sound thanks to @Rustydaggers !
 With the help of Randomage the XP Formulas have been vastly changed for flexibility
 Global modifiers and skill modifiers now support decimals
 Global formula modifier dropped from config
 GigaDrillBreaker/Berserk doesn't drop clay blocks anymore
 Fixed bug where Herbalism didn't heal more for bread/stew when right clicking a block
 Fixed bug where Wheat did not use the values form the config file
-
-TODO:
-	Add full customization of the colors
-	Fix Archery exploit
-	Fix the NPE with theType
-	Permission nodes for Spout elements
-	Small HUD style
-	HUD persistence
-	Maybe incorporate mmoParty
-
-In order to streamline the configuration of how XP/Levels are gained, we rewrote the formulas, it is paramount to understand that from a game perspective that does NOT change how fast you level up, it just changes how easy it is to configure the system, current configuration files will be automatically updated maintaining your selected leveling speed
-
+Fixed bug where Archery gave xp for inflicting self injury
+Watch added to clay loot tables and maps remove from clay loot tables
 
 Version 1.1.05
 Maps dropped from excavation are created correctly, and represent the area they are found in
