--- a/mcMMO/com/gmail/nossr50/locale/locale_en_us.properties
+++ b/mcMMO/com/gmail/nossr50/locale/locale_en_us.properties
@@ -99,7 +99,7 @@ m.EffectsAxes1_0=Skull Splitter (ABILITY)
 m.EffectsAxes1_1=Deal AoE Damage
 m.EffectsAxes2_0=Critical Strikes
 m.EffectsAxes2_1=Double Damage
-m.EffectsAxes3_0=Axe Mastery (500 SKILL)
+m.EffectsAxes3_0=Axe Mastery
 m.EffectsAxes3_1=Modifies Damage
 m.AbilLockAxes1=LOCKED UNTIL 500+ SKILL (AXEMASTERY)
 m.AbilBonusAxes1_0=Axe Mastery
