--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -2,6 +2,7 @@ Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
 Version 1.1.14
 mcMMO now transfers files between MC Server -> Client rather than Webserver -> Client (By default, you can change this..)
+Fixed a few problems with readying abilities for Woodcutting/Axes
 Changed the listener priority for OnEntityDamage from High to Monitor (Should make mcMMO compatible with Worldguards pvp regions among other things)
 Added addXpOverride for modders, this will ignore skill modifiers
 Added an option for Excavation to require use of a shovel, on by default
