Another WIP for 1.2.00, still a lot of work to be done.

--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -1,5 +1,12 @@
 Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
+Version 1.2.00
+New mobs added to xp tables
+Party leaders can now give bonus xp to nearby party members when grouped provided they are more skilled than their underlings
+Animals now give xp to combat skills (those poor sheep ;_;)
+Removed unnecessary sorcery permissions from plugin.yml
+Added 'Arcane Forging' subskill to Repair
+
 Version 1.1.17
 XP gained in combat is now softcapped by the remaining health of the entity you are damaging, preventing many exploits.
 Players in Creative mode no longer gain XP
@@ -9,6 +16,7 @@ Enemies should no longer grant XP when hit during their death
 Fixed an exploit that led to unlimited ability use
 Possibly fixed a bug where the same player would be listed multiple times in mctop
 Added author and description to plugin.yml
+
 /mmoedit and /addxp are useable from the console now
 Swearword's statistics tracking removed (He stopped the service, so its gone now.. On a positive note, I did find out 1000-1500 servers installed mcMMO a day)
 
