--- a/src/com/gmail/nossr50/locale/locale_pt_br.properties
+++ b/src/com/gmail/nossr50/locale/locale_pt_br.properties
@@ -364,3 +364,23 @@ Commands.xprate.started2=[[GOLD]]XP RATE AGORA é {0}x!!
 Commands.xplock.locked=[[GOLD]]Sua barra de XP BAR está travada em {0}!
 Commands.xplock.unlocked=[[GOLD]]Sua barra de XP foi [[GREEN]]DESTRAVADA[[GOLD]]!
 Commands.xplock.invalid=[[RED]]Nao existe habilidade com esse nome! Tente /xplock mining
+m.SkillAlchemy=ALCHEMY
+m.SkillEnchanting=ENCHANTING
+m.SkillFishing=FISHING
+mcPlayerListener.AlchemySkill=Alchemy: 
+mcPlayerListener.EnchantingSkill=Enchanting: 
+mcPlayerListener.FishingSkill=Fishing: 
+Skills.AlchemyUp=[[YELLOW]]Alchemy skill increased by {0}. Total ({1})
+Skills.EnchantingUp=[[YELLOW]]Enchanting skill increased by {0}. Total ({1})
+Skills.FishingUp=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
+Repair.LostEnchants=[[RED]]You were not skilled enough to keep any enchantments.
+Repair.ArcanePerfect=[[GREEN]]You have sustained the arcane energies in this item.
+Repair.Downgraded=[[RED]]Arcane power has decreased for this item.
+Repair.ArcaneFailed=[[RED]]Arcane power has permanently left the item.
+m.EffectsRepair5_0=Arcane Forging
+m.EffectsRepair5_1=Repair magic items
+m.ArcaneForgingRank=[[RED]]Arcane Forging: [[YELLOW]]Rank {0}/4
+m.ArcaneEnchantKeepChance=[[GRAY]]AF Success Rate: [[YELLOW]]{0}%
+m.ArcaneEnchantDowngradeChance=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}%
+m.ArcaneForgingMilestones=[[GOLD]][TIP] AF Rank Ups: [[GRAY]]Rank 1 = 100+, Rank 2 = 250+,
+m.ArcaneForgingMilestones2=[[GRAY]] Rank 3 = 500+, Rank 4 = 750+
