--- a/src/com/gmail/nossr50/locale/locale_ru.properties
+++ b/src/com/gmail/nossr50/locale/locale_ru.properties
@@ -341,3 +341,23 @@ Party.CouldNotKick=[[DARK_RED]]Вы не можете убрать игрока из группы {0}
 Party.NotInYourParty=[[DARK_RED]]{0} не в группе
 Party.CouldNotSetOwner=[[DARK_RED]]Вы не можете отдать лидерство игроку {0}
 mcMMO.Description=[[DARK_AQUA]]Q: Что это?,[[GOLD]]mcMMO это [[RED]]ОПЕН СУРС[[GOLD]] RPG мод для сервера Bukkit от пользователя [[BLUE]]nossr50,[[GOLD]]Здесь было добавлено много умений для Minecraft сервера.,[[GOLD]]Вы можете прокачать их разными способами,[[GOLD]]Вы хотите найти больше информации о умении [[GREEN]]/SKILLNAME[[GOLD]] ?,[[DARK_AQUA]]Q: Что я должен сделать?,[[GOLD]]Для примера... in [[DARK_AQUA]]Шахтёрство[[GOLD]] вы получите [[RED]]2-ой дроп[[GOLD]] или способность [[RED]]"Супер разрушитель"[[GOLD]] ,которая активируется [[GOLD]]нажатием правой кнопки мыши на некоторое время,[[GOLD]]связанное с вашим уровнем умения. Поднять уровень [[BLUE]]Шахтёрства,[[GOLD]]легко просто копайте руды и камни!
+m.SkillAlchemy=ALCHEMY
+m.SkillEnchanting=ENCHANTING
+m.SkillFishing=FISHING
+mcPlayerListener.AlchemySkill=Alchemy: 
+mcPlayerListener.EnchantingSkill=Enchanting: 
+mcPlayerListener.FishingSkill=Fishing: 
+Skills.AlchemyUp=[[YELLOW]]Alchemy skill increased by {0}. Total ({1})
+Skills.EnchantingUp=[[YELLOW]]Enchanting skill increased by {0}. Total ({1})
+Skills.FishingUp=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
+Repair.LostEnchants=[[RED]]You were not skilled enough to keep any enchantments.
+Repair.ArcanePerfect=[[GREEN]]You have sustained the arcane energies in this item.
+Repair.Downgraded=[[RED]]Arcane power has decreased for this item.
+Repair.ArcaneFailed=[[RED]]Arcane power has permanently left the item.
+m.EffectsRepair5_0=Arcane Forging
+m.EffectsRepair5_1=Repair magic items
+m.ArcaneForgingRank=[[RED]]Arcane Forging: [[YELLOW]]Rank {0}/4
+m.ArcaneEnchantKeepChance=[[GRAY]]AF Success Rate: [[YELLOW]]{0}%
+m.ArcaneEnchantDowngradeChance=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}%
+m.ArcaneForgingMilestones=[[GOLD]][TIP] AF Rank Ups: [[GRAY]]Rank 1 = 100+, Rank 2 = 250+,
+m.ArcaneForgingMilestones2=[[GRAY]] Rank 3 = 500+, Rank 4 = 750+
