--- a/src/com/gmail/nossr50/locale/locale_fr.properties
+++ b/src/com/gmail/nossr50/locale/locale_fr.properties
@@ -369,3 +369,22 @@ m.ArcaneEnchantKeepChance=[[GRAY]]AF Success Rate: [[YELLOW]]{0}%
 m.ArcaneEnchantDowngradeChance=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}%
 m.ArcaneForgingMilestones=[[GOLD]][TIP] AF Rank Ups: [[GRAY]]Rank 1 = 100+, Rank 2 = 250+,
 m.ArcaneForgingMilestones2=[[GRAY]] Rank 3 = 500+, Rank 4 = 750+
+Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
+Fishing.ItemFound=[[GRAY]]Treasure found!
+m.SkillFishing=FISHING
+m.XPGainFishing=Fishing (Go figure!)
+m.EffectsFishing1_0=Treasure Hunter (Passive)
+m.EffectsFishing1_1=Fish up misc objects
+m.EffectsFishing2_0=Magic Hunter
+m.EffectsFishing2_1=Find Enchanted Items
+m.EffectsFishing3_0=Shake (vs. Entities)
+m.EffectsFishing3_1=Shake items off of mobs w/ fishing pole
+m.FishingRank=[[RED]]Treasure Hunter Rank: [[YELLOW]]{0}/5
+m.FishingMagicInfo=[[RED]]Magic Hunter: [[GRAY]] **Improves With Treasure Hunter Rank**
+m.ShakeInfo=[[RED]]Shake: [[YELLOW]]Tear items off mobs, mutilating them in the process ;_;
+m.AbilLockFishing1=LOCKED UNTIL 150+ SKILL (SHAKE)
+m.TamingSummon=[[GREEN]]Summoning complete
+m.TamingSummonFailed=[[RED]]You have too many wolves nearby to summon any more.
+m.EffectsTaming7_0=Call of the Wild
+m.EffectsTaming7_1=Summon a wolf to your side
+m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with 10 Bones in hand
