--- a/src/com/gmail/nossr50/locale/locale_nl.properties
+++ b/src/com/gmail/nossr50/locale/locale_nl.properties
@@ -393,4 +393,4 @@ m.TamingSummon=[[GREEN]]Summoning complete
 m.TamingSummonFailed=[[RED]]You have too many wolves nearby to summon any more.
 m.EffectsTaming7_0=Call of the Wild
 m.EffectsTaming7_1=Summon a wolf to your side
-m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with 10 Bones in hand
+m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones in hand
