--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,11 @@ Changelog:
 #Versions without changelogs probably had very small misc fixes, like tweaks to the source code
 
 Version 1.2.08
+ - Changes in combat exp (Pull Request #49)
+ - Repair for bows & leather armor (Pull Request #46)
+ - Fixed missing images (Pull Request #45)
+ - POM Changes for dependencies (Pull Request #36)
+ - Fishing & Repair fixes (Pull Request #31)
  - Fixed CraftOfflinePlayer issue (Issue #212) errors for offline wolf owners
  - Pull in commit from @NuclearW for issue from previous commit
 
